@@ -1,6 +1,7 @@
 ncmpc 0.42 - not yet released
 * file page: repaint after moving cursor with mouse
 * file page: handle mouse click on directory
+* library page: mouse support
 * suppor the mouse wheel
 * fix assertion failure on exit
 
